force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Interest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Start_Date__c</fullName>
    <description>Day After Unpaid Invoice Due Date</description>
    <inlineHelpText>Day After Unpaid Invoice Due Date</inlineHelpText>
    <label>Interest Start Date</label>
    <type>Date</type>
</CustomField>