force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Category__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Category__c</fullName>
    <description>System auto fills the Invoice Type(non editable) information to &#39;Invoice Category&#39; field for all types of invoices on creation. Users can modify the value on Invoice Category on the &#39;Manual Invoice&#39; type to identify the purpose of the manual invoice created.</description>
    <inlineHelpText>Indicates the category of the invoice and is purely used for reporting and information purposes</inlineHelpText>
    <label>Invoice Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebate Rental</fullName>
            </value>
            <value>
                <fullName>PBH-Power by the Hour</fullName>
            </value>
            <value>
                <fullName>JCT MR</fullName>
            </value>
            <value>
                <fullName>JCT Rental</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non MR</fullName>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
            <value>
                <fullName>Deferred - MR</fullName>
            </value>
            <value>
                <fullName>Fixed Rent</fullName>
            </value>
            <value>
                <fullName>Floating Rent</fullName>
            </value>
            <value>
                <fullName>Manual Rent</fullName>
            </value>
            <value>
                <fullName>Seasonal Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-SD</fullName>
            </value>
            <value>
                <fullName>Predelivery Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Security Deposit - MR</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Broker Fee</fullName>
            </value>
            <value>
                <fullName>Agency Fee</fullName>
            </value>
            <value>
                <fullName>Other Receivables</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Default Interest</fullName>
            </value>
            <value>
                <fullName>Manual Supplemental Rent Invoice</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>