force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Default Late Interest Invoice Date</description>
    <inlineHelpText>Default Late Interest Invoice Date</inlineHelpText>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>