force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Deferred_From__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Deferred_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the link to the original Invoice on which the user created the deferred payment plan.</description>
    <inlineHelpText>Indicates the link to the original Invoice on which the user created the deferred payment plan.</inlineHelpText>
    <label>Invoice Deferred From</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Deferred Payment Plan Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>