force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Number__c</fullName>
    <description>Unique Invoice Sequence Number</description>
    <inlineHelpText>Unique Invoice Sequence Number</inlineHelpText>
    <label>_Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>