force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source: Fortress</description>
    <inlineHelpText>Has the invoice been sent?</inlineHelpText>
    <label>Invoice Sent?</label>
    <type>Checkbox</type>
</CustomField>