force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <description>Note: When any invoice type is added, add the same to the {Invoice Type} field on the Invoice Line Item Object and add the dependency.</description>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft MR</fullName>
                <default>true</default>
                <label>Aircraft MR</label>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non MR</fullName>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
            <value>
                <fullName>Deferred - MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-MR</fullName>
            </value>
            <value>
                <fullName>HL/SL-SD</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>HL/SL-Interest</fullName>
            </value>
            <value>
                <fullName>Broker Fee</fullName>
            </value>
            <value>
                <fullName>Agency Fee</fullName>
            </value>
            <value>
                <fullName>Other Receivables</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Default Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>