force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Invoiced_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoiced_Amount_Formula__c</fullName>
    <description>This field displays the sum of Initial Invoiced Amount and Total Adjustments made to this invoice</description>
    <formula>leaseworks__Amount__c +   leaseworks__Total_Adjustment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the sum of Initial Invoiced Amount and Total Adjustments made to this invoice</inlineHelpText>
    <label>Adjusted Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>