force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Is_Deferred_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Deferred_Rent__c</fullName>
    <description>This field is used for accounting to identify whether the rent slip is spanning across different months</description>
    <formula>AND(MONTH( leaseworks__Rent__r.leaseworks__Start_Date__c )!= MONTH( leaseworks__Rent__r.leaseworks__For_Month_Ending__c ), (ISPICKVAL(leaseworks__Invoice_Type__c, &#39;Rent&#39;)||ISPICKVAL(leaseworks__Invoice_Type__c, &#39;HL/SL-Rent&#39;)) )</formula>
    <inlineHelpText>Read-only formula field, used for accounting to identify whether the rent slip is spanning across different months</inlineHelpText>
    <label>{Is Deferred Rent}</label>
    <type>Checkbox</type>
</CustomField>