force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Late_Payment_Interest_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Late_Payment_Interest_Invoice__c</fullName>
    <description>Late Payment Interest Invoice calculated on the unpaid invoice</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Late Payment Interest Invoice calculated on the unpaid invoice</inlineHelpText>
    <label>Z_Unused_2203 Late Payment Interest Inv</label>
    <type>Text</type>
</CustomField>