force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <label>Contract</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>