force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Lease_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Id__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lease_Id__c</formula>
    <label>Lease Id</label>
    <type>Text</type>
</CustomField>