force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Lessor_Level__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Level__c</fullName>
    <description>This field is used to set the lessor/HL in the invoice name</description>
    <label>_Lessor Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>