force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__LoC_Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LoC_Amount_Applied__c</fullName>
    <label>LoC Amount Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>