force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Month_Ending__c</fullName>
    <label>_For Period Ending</label>
    <type>Date</type>
</CustomField>