force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Monthly_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Monthly_Interest_Rate__c</fullName>
    <formula>leaseworks__Annual_Interest_Rate__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2203 Monthly Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>