force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Monthly_Utilization_Type_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Monthly_Utilization_Type_F__c</fullName>
    <formula>CASE(Text(leaseworks__Invoice_Type__c) 
, &apos;Aircraft MR&apos;,  if(  isBlank(leaseworks__Y_Hidden_Sub_Type__c)  ,Text(leaseworks__Utilization_Report__r.leaseworks__Type__c),leaseworks__Y_Hidden_Sub_Type__c)
,null

)</formula>
    <label>Utilization Type</label>
    <type>Text</type>
</CustomField>