force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__MR_Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Accounting_Method__c</fullName>
    <description>The Accounting method for generating JE for MR Invoices</description>
    <label>MR Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Accrual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>