force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Net_Realised_FX_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Realised_FX_Gain_Loss__c</fullName>
    <description>Captures the cumulative realised FX gain or loss on an invoice by summing all related payment/credit FX differences. Used to reconcile invoice-level USD reporting with actual payment values.</description>
    <inlineHelpText>Total realised foreign currency gain or loss for this invoice, based on differences between the invoice FX rate and the payment date FX rates. Positive = gain; Negative = loss.</inlineHelpText>
    <label>Net Realised FX Gain/Loss</label>
    <summarizedField>leaseworks__Payment__c.leaseworks__FX_Gain_Loss__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Cancelled-Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Payment__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>