force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Outstanding_Balance_End_Of_Prev_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Outstanding_Balance_End_Of_Prev_Month__c</fullName>
    <description>Just a duplicate field to convert this to currency. By mistake I had created it as number field and I am already using it in a number of places.</description>
    <formula>leaseworks__Outstanding_Balance_As_Of_Previous_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to calculate the interest. Uses the Late Payment Interest Rate field on the lease to calculate the interest for the whole month of previous month. So if invoice date is 11/11/2014, then will calculate interest for the period 10/1-10/31</inlineHelpText>
    <label>Outstanding Balance @ End Of Prev. Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>