force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Overdue__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the invoice has a due date earlier than today&#39;s date. This field is only used for reporting purposes; i.e. the Outstanding  calculation.</description>
    <inlineHelpText>If checked, the invoice has a due date earlier than today&#39;s date. This field is only used for reporting purposes; i.e. the Outstanding  calculation.</inlineHelpText>
    <label>_Overdue</label>
    <type>Checkbox</type>
</CustomField>