force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Payment_Listings__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Listings__c</fullName>
    <description>All payments against the Invoice along with their associated date are listed here.</description>
    <inlineHelpText>All payments against the Invoice along with their associated date are listed here..</inlineHelpText>
    <label>Payment Listings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>