force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Status__c</fullName>
    <description>This status indicates if the invoice has been paid or not.</description>
    <inlineHelpText>This status indicates if the invoice has been paid or not.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Credited</fullName>
            </value>
            <value>
                <fullName>Partially Credited</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>