force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Period_End_Date__c</fullName>
    <description>This field is automatically populated from the Rent Slip-&gt;End Date for Rent invoices, from the Utilization-&gt;End Date for Aircraft MR invoices, from Interest End Date for Interest invoices, from Reconciliation End Date for Non-MR invoices, from Sublease Invoice-&gt;Period End Date for HL/SL invoices (both Rent and MR), from &#39;Invoice Deferred From&#39; -&gt;Period End Date. For all other types, it is manually entered on the invoice.</description>
    <inlineHelpText>Autofilled from Rent end for Rent/Utilization end for MR/Interest end for Interest/Reconciliation end for Non MR/Sublease invoice end for HL/SL and related Rent or MR end for Deferred Rent/MR invoices. Manually entered for other invoice types.</inlineHelpText>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>