force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Period_Start_Date__c</fullName>
    <description>This field is automatically populated from the Rent Slip-&gt;Start Date for Rent invoices, from the Utilization-&gt;Start Date for Aircraft MR invoices, from Interest Start Date for Interest invoices, from Reconciliation Start Date for Non-MR invoices, from Sublease Invoice-&gt;Period Start Date for HL/SL invoices (both Rent and MR), from &#39;Invoice Deferred From&#39; -&gt;Period Start Date. For all other types, it is manually entered on the invoice.</description>
    <inlineHelpText>Autofilled from Rent start for Rent/Utilization start for MR/Interest start for Interest/Reconciliation start for Non MR/Sublease invoice start for HL/SL and related Rent or MR start for Deferred Rent/MR invoices. Manually entered for other invoice types.</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>