force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Prorate_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prorate_F__c</fullName>
    <formula>leaseworks__Prorate__c</formula>
    <label>Prorate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>