force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Provisional_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Provisional_FH__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2404 Provisional FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>