force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Reason_Code_3__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reason_Code_3__c</fullName>
    <description>Source: Fortress
Allow up to Three Adjustments on a given invoice.</description>
    <label>Z_Unused_2103 Reason Code 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Fees</fullName>
            </value>
            <value>
                <fullName>Late Charges</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
            <value>
                <fullName>Additional Charges</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>True-ups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>