force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Refresh_Values_From_UR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Refresh_Values_From_UR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate whether Invoice should be updated with fresh values (FH/FC, MR numbers) from Monthly Utilization. This is to prevent automatic/accidental update of invoice values.</description>
    <inlineHelpText>Should the invoice be refreshed with values from the source like Utilization</inlineHelpText>
    <label>Z_Unused_2103 Refresh Values</label>
    <type>Checkbox</type>
</CustomField>