force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Refund_Amount__c</fullName>
    <label>Z_Unused_2012 Refund Amount</label>
    <summarizedField>leaseworks__Payment__c.leaseworks__Y_Hidden_Amount_ABS__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Payment__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>