force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Rent__c.leaseworks__RentPayments__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Rent__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>