force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Amount__c</fullName>
    <label>Rent + Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>