force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent_Escalation_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Escalation_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Escalation Factor</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>