force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent_Payable_Frm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Payable_Frm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party who is obligated to pay in a financial transaction.</description>
    <inlineHelpText>The party who is obligated to pay in a financial transaction.</inlineHelpText>
    <label>Payor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>