force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent_Payable_to__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Payable_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rent Paid: child lessor for SI and parent lessor for PI</description>
    <label>Z_Unused_2206 Rent Payable To</label>
    <referenceTo>leaseworks__Counterparty__c</referenceTo>
    <relationshipLabel>Invoices (Rent Paid to)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>