force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Rent_Pyable_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Pyable_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party to whom money is to be paid in a financial transaction.</description>
    <inlineHelpText>The party to whom money is to be paid in a financial transaction.</inlineHelpText>
    <label>Payee</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Rent Payable To)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>