force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__SD_Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SD_Accounting_Method__c</fullName>
    <label>SD Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Accrual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>