force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>This status indicates the approval of the invoice record.  Only approved invoice records are posted for Receivable reporting.</description>
    <inlineHelpText>This status indicates the approval of the invoice record.  Only approved invoice records are posted for Receivable reporting.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled-Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>Submitted for Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>