force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Sub_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_Invoice__c</fullName>
    <description>Indicates that this is a sub invoice that originated from a deferred parent invoice</description>
    <formula>if( leaseworks__Invoice_Deferred_From__c !=null,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that this is a sub invoice that originated from a deferred parent invoice</inlineHelpText>
    <label>Sub Invoice</label>
    <type>Checkbox</type>
</CustomField>