force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Amount__c</fullName>
    <description>Amount of tax to be collected from the invoice. Tax Amount is based on the Tax percentage of the country of the lessor, if tax is applicable as set on the lease.</description>
    <formula>IF(leaseworks__Tax_Type__c=&#39;JCT&#39;, 
IF(ISPICKVAL(leaseworks__Invoice_Type__c , &#39;Rent&#39;), 
((leaseworks__Rent_Due_Amount__c + leaseworks__Gross_Up_Amount__c) * leaseworks__Tax_Rate__c), 
IF(ISPICKVAL(leaseworks__Invoice_Type__c , &#39;Aircraft MR&#39;), 
((leaseworks__Utilization_Report__r.leaseworks__Total_Maintenance_Reserve__c  + leaseworks__Gross_Up_Amount__c) * leaseworks__Tax_Rate__c), ((leaseworks__Invoiced_Amount_Formula__c+leaseworks__Gross_Up_Amount__c) * leaseworks__Tax_Rate__c))) , 
(leaseworks__Invoiced_Amount_Formula__c * leaseworks__Tax_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of tax to be collected from the invoice. Tax Amount is based on the Tax percentage of the country of the lessor, if tax is applicable as set on the lease.</inlineHelpText>
    <label>_Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>