force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Tax_Country__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Country__c</fullName>
    <label>_Tax Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>