force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Tax_Rate_OnLease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Rate_OnLease__c</fullName>
    <description>This field copy the value from lease tax rate. user should not update this value manually.</description>
    <label>_Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>